# zzap

./: .gitignore  Cargo.toml  Makefile  README.md  spec.md  todo
.github/workflows/: coverage.yml  tests.yml
assets/tests/: 1_MiB_of_data  binary_data
benches/: search.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: node.rs  protocol.rs
src/: lib.rs  main.rs
src/encryption/: key.rs  message.rs  mod.rs
src/lang/: mod.rs
src/protocol/: message.rs  mod.rs  request.rs  response.rs
src/search/: btree.rs  dash.rs  dash2.rs  mod.rs  std.rs
src/server/: connection.rs  handler.rs  mod.rs  test.rs
src/storage/: bucket.rs  collection.rs  error.rs  mock.rs  mod.rs
tests/: end-to-end.rs  integration.rs
